--- a/index.html
+++ b/index.html
@@ -63,18 +63,125 @@
     <!-- Section About -->
     <div id="About" class="about">
       <h1 class="judul_section">OUR PRODUCT</h1>
-      <img src="img/product.png" alt="Overview Our Product">
+      <img src="img/product.png" alt="Overview Our Product" />
     </div>
 
     <!-- Section Documentation -->
-
     <div id="Documentation" class="documentation">
       <h1 class="judul_section">Documentation</h1>
-        <p>Prioritizing your safety and comfort, our intelligent navigation system provides real-time updates and alerts, ensuring a smooth and secure journey.</p>
+      <p>Prioritizing your safety and comfort, our intelligent navigation system provides real-time updates and alerts, ensuring a smooth and secure journey.</p>
+      <div class="gallery">
+        <div class="gallery-container">
+          <img src="img/doc/gambar1.jpg" class="gallery-item gallery-item-1" data-index="1" />
+          <img src="img/doc/gambar2.jpg" class="gallery-item gallery-item-2" data-index="2" />
+          <img src="img/doc/gambar3.jpg" class="gallery-item gallery-item-3" data-index="3" />
+          <img src="img/doc/gambar4.jpg" class="gallery-item gallery-item-4" data-index="4" />
+          <img src="img/doc/gambar5.jpg" class="gallery-item gallery-item-5" data-index="5" />
+          <img src="img/doc/gambar6.jpg" class="gallery-item gallery-item-6" data-index="6" />
+          <img src="img/doc/gambar7.jpg" class="gallery-item gallery-item-7" data-index="7" />
+          <img src="img/doc/gambar8.jpg" class="gallery-item gallery-item-8" data-index="8" />
+        </div>
+        <div class="gallery-controls"></div>
+      </div>
     </div>
 
+    <!-- Section Features -->
+    <div id="Features" class="features">
+      <!-- <h1 class="judul_section">Features</h1> -->
+      <!-- <div class="feat">
+        <p>Revolutionize your rail travel with our cutting-edge navigation system, featuring seamless integration with mobile devices, comprehensive maps, and multilingual support.</p>
+      </div> -->
+      <div class="slideFeat" style="--width: 200px; --quantity: 12">
+        <div class="list">
+          <div class="card" style="--position: 1">
+            <h5 class="card-header" style="text-align: center">1</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see the map display in 2D form</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 2">
+            <h5 class="card-header" style="text-align: center">2</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see the map display in 3D form</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 3">
+            <h5 class="card-header" style="text-align: center">3</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see the position of the train he is driving on the map in real time from GPS</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 4">
+            <h5 class="card-header" style="text-align: center">4</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see the current train speed from GPS information</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 5">
+            <h5 class="card-header" style="text-align: center">5</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see the station he is going to on the map and the station he is leaving on the map</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 6">
+            <h5 class="card-header" style="text-align: center">6</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see trains that are approaching or nearby</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 7">
+            <h5 class="card-header" style="text-align: center">7</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see trains that are approaching or nearby in the prediction function</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 8">
+            <h5 class="card-header" style="text-align: center">8</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see trains that are nearby in the form of text information</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 9">
+            <h5 class="card-header" style="text-align: center">9</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see information about the distance from the train that will approach him</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 10">
+            <h5 class="card-header" style="text-align: center">10</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see information related to TCPA in seconds</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 11">
+            <h5 class="card-header" style="text-align: center">11</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see information related to safety breaks</p>
+            </div>
+          </div>
+
+          <div class="card" style="--position: 12">
+            <h5 class="card-header" style="text-align: center">12</h5>
+            <div class="card-body">
+              <p class="card-text">The machinist can see warnings related to certain tracks</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/carousel.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/toggle.js"></script>
   </body>
 </html>
-
-<script src="js/scroll.js"></script>
-<script src="js/toggle.js"></script>
