--- a/index.html
+++ b/index.html
@@ -87,93 +87,94 @@
 
     <!-- Section Features -->
     <div id="Features" class="features">
-      <!-- <h1 class="judul_section">Features</h1> -->
-      <!-- <div class="feat">
-        <p>Revolutionize your rail travel with our cutting-edge navigation system, featuring seamless integration with mobile devices, comprehensive maps, and multilingual support.</p>
-      </div> -->
-      <div class="slideFeat" style="--width: 200px; --quantity: 12">
-        <div class="list">
-          <div class="card" style="--position: 1">
-            <h5 class="card-header" style="text-align: center">1</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see the map display in 2D form</p>
+      <div class="featContainers">
+        <div class="text-center">
+          <h1 class="judul_section">Features</h1>
+          <p>Prioritizing your safety and comfort, our intelligent navigation system provides real-time updates and alerts, ensuring a smooth and secure journey.</p>
+        </div>
+
+        <div class="featuresCard">
+          <div class="card-row">
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="card-row">
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
           </div>
 
-          <div class="card" style="--position: 2">
-            <h5 class="card-header" style="text-align: center">2</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see the map display in 3D form</p>
+          <div class="card-row">
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
           </div>
 
-          <div class="card" style="--position: 3">
-            <h5 class="card-header" style="text-align: center">3</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see the position of the train he is driving on the map in real time from GPS</p>
+          <div class="card-row">
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
-          </div>
-
-          <div class="card" style="--position: 4">
-            <h5 class="card-header" style="text-align: center">4</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see the current train speed from GPS information</p>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
-          </div>
-
-          <div class="card" style="--position: 5">
-            <h5 class="card-header" style="text-align: center">5</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see the station he is going to on the map and the station he is leaving on the map</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 6">
-            <h5 class="card-header" style="text-align: center">6</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see trains that are approaching or nearby</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 7">
-            <h5 class="card-header" style="text-align: center">7</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see trains that are approaching or nearby in the prediction function</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 8">
-            <h5 class="card-header" style="text-align: center">8</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see trains that are nearby in the form of text information</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 9">
-            <h5 class="card-header" style="text-align: center">9</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see information about the distance from the train that will approach him</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 10">
-            <h5 class="card-header" style="text-align: center">10</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see information related to TCPA in seconds</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 11">
-            <h5 class="card-header" style="text-align: center">11</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see information related to safety breaks</p>
-            </div>
-          </div>
-
-          <div class="card" style="--position: 12">
-            <h5 class="card-header" style="text-align: center">12</h5>
-            <div class="card-body">
-              <p class="card-text">The machinist can see warnings related to certain tracks</p>
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
           </div>
         </div>
