--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAF@48,400,0,0">
     <link rel="stylesheet" href="style.css" />
 
     <title>Navigasi Kereta Api</title>
@@ -93,94 +94,89 @@
           <p>Prioritizing your safety and comfort, our intelligent navigation system provides real-time updates and alerts, ensuring a smooth and secure journey.</p>
         </div>
 
-        <div class="featuresCard">
-          <div class="card-row">
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          
-          <div class="card-row">
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
+        <div class="container">
+          <div class="slider-wrapper">
+            <button id="prev-slide" class="slide-button material-symbols-rounded"><</button>
 
-          <div class="card-row">
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="image-list">
+              <div class="box">
+                <img src="img/fit/img1.jpg" alt="">
+                <div class="overlay">
+                  <h3>Map 2D</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img2.jpg" alt="">
+                <div class="overlay">
+                  <h3>Map 3D</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img3.png" alt="">
+                <div class="overlay">
+                  <h3>GPS Realtime</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img4.jpg" alt="">
+                <div class="overlay">
+                  <h3>Speed Train</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img5.jpg" alt="">
+                <div class="overlay">
+                  <h3>Station</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img6.jpeg" alt="">
+                <div class="overlay">
+                  <h3>Approaching</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img7.jpg" alt="">
+                <div class="overlay">
+                  <h3>Prediction</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img8.jpg" alt="">
+                <div class="overlay">
+                  <h3>TCPA & Break</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
+              </div>
+              <div class="box">
+                <img src="img/fit/img9.jpg" alt="">
+                <div class="overlay">
+                  <h3>Warning</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+                </div>
               </div>
             </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
 
-          <div class="card-row">
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <h5 class="card-header">Featured</h5>
-              <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <button id="next-slide" class="slide-button material-symbols-rounded">></button>
+
+          </div>
+          <div class="slider-scrollbar">
+            <div class="scrollbar-track">
+              <div class="scrollbar-thumb">
               </div>
             </div>
           </div>
         </div>
-      </div>
     </div>
 
+    <script src="js/features.js"></script>
     <script src="js/carousel.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/toggle.js"></script>
