--- a/index.html
+++ b/index.html
@@ -87,94 +87,158 @@
     </div>
 
     <!-- Section Features -->
-    <div id="Features" class="features">
-      <div class="featContainers">
-        <div class="text-center">
-          <h1 class="judul_section">Features</h1>
-          <p>Prioritizing your safety and comfort, our intelligent navigation system provides real-time updates and alerts, ensuring a smooth and secure journey.</p>
-        </div>
-
-        <div class="container">
-          <div class="slider-wrapper">
-            <button id="prev-slide" class="slide-button material-symbols-rounded"><</button>
-
-            <div class="image-list">
-              <div class="box">
-                <img src="img/fit/img1.jpg" alt="">
-                <div class="overlay">
-                  <h3>Map 2D</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img2.jpg" alt="">
-                <div class="overlay">
-                  <h3>Map 3D</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img3.png" alt="">
-                <div class="overlay">
-                  <h3>GPS Realtime</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img4.jpg" alt="">
-                <div class="overlay">
-                  <h3>Speed Train</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img5.jpg" alt="">
-                <div class="overlay">
-                  <h3>Station</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img6.jpeg" alt="">
-                <div class="overlay">
-                  <h3>Approaching</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img7.jpg" alt="">
-                <div class="overlay">
-                  <h3>Prediction</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img8.jpg" alt="">
-                <div class="overlay">
-                  <h3>TCPA & Break</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-              <div class="box">
-                <img src="img/fit/img9.jpg" alt="">
-                <div class="overlay">
-                  <h3>Warning</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
-                </div>
-              </div>
-            </div>
-
-            <button id="next-slide" class="slide-button material-symbols-rounded">></button>
-
-          </div>
-          <div class="slider-scrollbar">
-            <div class="scrollbar-track">
-              <div class="scrollbar-thumb">
-              </div>
-            </div>
-          </div>
-        </div>
+<div id="Features" class="features">
+  <div class="featContainers">
+    <div class="text-center">
+      <h1 class="judul_section">Features</h1>
+      <p>Prioritizing your safety and comfort, our intelligent navigation system provides real-time updates and alerts, ensuring a smooth and secure journey.</p>
     </div>
+
+    <div class="container">
+      <div class="slider-wrapper">
+        <button id="prev-slide" class="slide-button material-symbols-rounded"><</button>
+
+        <div class="image-list">
+          <div class="box">
+            <img src="img/fit/img1.jpg" alt="">
+            <div class="overlay">
+              <h3>Map 2D</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img2.jpg" alt="">
+            <div class="overlay">
+              <h3>Map 3D</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img3.png" alt="">
+            <div class="overlay">
+              <h3>GPS Realtime</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img4.jpg" alt="">
+            <div class="overlay">
+              <h3>Speed Train</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img5.jpg" alt="">
+            <div class="overlay">
+              <h3>Station</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img6.jpeg" alt="">
+            <div class="overlay">
+              <h3>Approaching</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img7.jpg" alt="">
+            <div class="overlay">
+              <h3>Prediction</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img8.jpg" alt="">
+            <div class="overlay">
+              <h3>TCPA & Break</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/fit/img9.jpg" alt="">
+            <div class="overlay">
+              <h3>Warning</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime necessitatibus corrupti quas, voluptas facere sequi id laboriosam praesentium corporis excepturi sit cumque minus alias sed natus in architecto aut!</p>
+            </div>
+          </div>
+        </div>
+
+        <button id="next-slide" class="slide-button material-symbols-rounded">></button>
+      </div>
+      <div class="slider-scrollbar">
+        <div class="scrollbar-track">
+          <div class="scrollbar-thumb">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+    <!-- Section Portfolio -->
+    <div id="Portfolio" class="portfolio">
+      <h1 class="judul_section">Portfolio</h1>
+      <div style="margin-top: 3vh;">
+        <iframe width="700" height="415" style="border-radius: 15px;" src="https://www.youtube.com/embed/rb4f3SDlU5M?si=minXOsbgDGkm4ozX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- Section Team -->
+    <div id="Team" class="team">
+      <h1 class="judul_section">OUR TEAM</h1>
+      <div class="list-team row">
+        <div class="col">
+          <img src="img/team/Dr. Sinung Suakanto, S.T., M.T..png" alt="" style="height: 50vh;">
+          <h5>Dr. Sinung Suakanto, S.T., M.T.</h5>
+          <p>Ketua Peneliti</p>
+        </div>
+        <div class="col">
+          <img src="img\team\Inggit.jpg" alt="" style="height: 50vh;">
+          <h5>Inggit Yeira Budi Agranata</h5>
+          <p>Mahasiswa</p>
+        </div>
+        <div class="col">
+          <img src="img\team\Farabi.jpg" alt="" style="height: 50vh;">
+          <h5>Rayhan Raya Farabi</h5>
+          <p>Mahasiswa</p>
+        </div>
+        <div class="col">
+          <img src="img\team\Profil.jpg" alt="" style="height: 50vh;">
+          <h5>Dasheva Ivan Tyastama</h5>
+          <p>Mahasiswa</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section Footer -->
+     <!-- HTML -->
+<footer class="footer">
+  <div class="footer-column">
+      <h4>About Us</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod.</p>
+  </div>
+  <div class="footer-column">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="#top">Home</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Documentation">Documentation</a></li>
+        <li><a href="#Features">Features</a></li>
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#Team">Team</a></li>
+      </ul>
+  </div>
+  <div class="footer-column">
+      <h4>Contact Us</h4>
+      <p>1234 Street Name</p>
+      <p>City, State, 56789</p>
+      <p>Email: info@example.com</p>
+  </div>
+</footer>
+
 
     <script src="js/features.js"></script>
     <script src="js/carousel.js"></script>
